--- a/LibraryProgram/.settings/org.eclipse.core.resources.prefs
+++ b/LibraryProgram/.settings/org.eclipse.core.resources.prefs
@@ -1,8 +1,10 @@
 eclipse.preferences.version=1
+encoding//src/kr/ac/hansei/java/AddBookGUI.java=UTF-8
 encoding//src/kr/ac/hansei/java/AddMemberGUI.java=UTF-8
 encoding//src/kr/ac/hansei/java/BookManagementGUI.java=UTF-8
 encoding//src/kr/ac/hansei/java/DBConnection.java=UTF-8
 encoding//src/kr/ac/hansei/java/DeleteBookGUI.java=UTF-8
+encoding//src/kr/ac/hansei/java/DeleteMemberGUI.java=UTF-8
 encoding//src/kr/ac/hansei/java/LoneBookGUI.java=UTF-8
 encoding//src/kr/ac/hansei/java/MainGUI.java=UTF-8
 encoding//src/kr/ac/hansei/java/MemberManagementGUI.java=UTF-8
